--- a/app/src/main/res/layout/recycler_view_tablature.xml
+++ b/app/src/main/res/layout/recycler_view_tablature.xml
@@ -6,7 +6,6 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
@@ -21,17 +20,15 @@
                 android:id="@+id/imageView"
                 android:layout_width="@dimen/recycler_icon_size"
                 android:layout_height="@dimen/recycler_icon_size"
+                android:adjustViewBounds="true"
                 android:contentDescription="@string/app_tablature"
+                android:cropToPadding="true"
                 android:padding="20dp"
                 android:scaleType="fitCenter"
-                app:srcCompat="@drawable/ic_file_pdf_red_24dp"
-                android:adjustViewBounds="true"
-                android:cropToPadding="true" />
+                app:srcCompat="@drawable/ic_file_pdf_red_24dp" />
 
             <TextView
                 android:id="@+id/text_file"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/btn_open"
@@ -40,6 +37,8 @@
                 android:ellipsize="end"
                 android:gravity="center_vertical"
                 android:maxLines="1"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
                 android:textSize="@dimen/list_text_size" />
 
             <Button
