--- a/app/src/main/res/menu/settings.xml
+++ b/app/src/main/res/menu/settings.xml
@@ -5,6 +5,6 @@
     <item
         android:id="@+id/menu_refresh"
         android:icon="@drawable/ic_autorenew_white_24dp"
-        app:showAsAction="ifRoom"
-        android:title="@string/app_refresh" />
+        android:title="@string/app_refresh"
+        app:showAsAction="ifRoom" />
 </menu>
