--- a/app/src/main/res/values-w600dp/dimens.xml
+++ b/app/src/main/res/values-w600dp/dimens.xml
@@ -6,5 +6,7 @@
     <dimen name="list_text_size">20sp</dimen>
     <dimen name="list_icon_size">60dp</dimen>
 
+    <dimen name="dialog_icon_size">100dp</dimen>
+
     <dimen name="recycler_icon_size">140dp</dimen>
 </resources>
