--- a/app/src/main/res/layouts/fragments/layout/fragment_tuner.xml
+++ b/app/src/main/res/layouts/fragments/layout/fragment_tuner.xml
@@ -2,10 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:gravity="center"
+    android:orientation="horizontal">
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/text_frequency_value"
+        android:text="@string/app_default_frequency"
+        android:padding="5dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView3" />
+        android:textSize="@dimen/text_view_size" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/app_frequency"
+        android:textSize="@dimen/text_view_size" />
 </LinearLayout>
