--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,8 @@
     <dimen name="list_text_size">18sp</dimen>
     <dimen name="list_icon_size">60dp</dimen>
 
+    <dimen name="text_view_size">30sp</dimen>
+
     <dimen name="dialog_icon_size">80dp</dimen>
 
     <dimen name="recycler_icon_size">100dp</dimen>
