--- a/app/src/main/res/layouts/fragments/layout/fragment_tuner.xml
+++ b/app/src/main/res/layouts/fragments/layout/fragment_tuner.xml
@@ -1,22 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/text_frequency_value"
-        android:text="@string/app_default_frequency"
-        android:padding="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/text_view_size" />
+    <com.jjoe64.graphview.GraphView
+        android:id="@+id/graph_tuner"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:title="@string/app_chord"
+        app:seriesTitle="@string/app_frequency"
+        app:seriesColor="@color/colorPrimaryDark" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/app_frequency"
-        android:textSize="@dimen/text_view_size" />
+    <!--<TextView-->
+    <!--android:id="@+id/text_frequency_value"-->
+    <!--android:text="@string/app_default_frequency"-->
+    <!--android:padding="5dp"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:textSize="@dimen/text_view_size" />-->
+
+    <!--<TextView-->
+    <!--android:id="@+id/textView2"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="@string/app_frequency"-->
+    <!--android:textSize="@dimen/text_view_size" />-->
 </LinearLayout>
