--- a/app/src/main/res/layouts/fragments/layout/fragment_tuner.xml
+++ b/app/src/main/res/layouts/fragments/layout/fragment_tuner.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="horizontal">
 
-    <com.jjoe64.graphview.GraphView
-        android:id="@+id/graph_tuner"
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/tuner_chart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:title="@string/app_chord"
-        app:seriesTitle="@string/app_frequency"
-        app:seriesColor="@color/colorPrimaryDark" />
+        android:layout_height="match_parent" />
 
     <!--<TextView-->
     <!--android:id="@+id/text_frequency_value"-->
