--- a/app/src/main/res/layouts/fragments/layout/fragment_tuner.xml
+++ b/app/src/main/res/layouts/fragments/layout/fragment_tuner.xml
@@ -8,7 +8,8 @@
         android:id="@+id/tuner_chart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/text_frequency_value" />
+        android:layout_above="@+id/text_frequency_value"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/text_frequency_value"
